test/analyze/type_check/trait_object/call_args.myte
module test

trait Foo {}

fun useTraitObject(x: trait Foo) {}

fun testCall(x: trait Foo) {
  // Success
  useTraitObject(x);

  // Failure
  useTraitObject(1);
}

fun main() {}